[package]
name = "pallet-swaps"
version = "2.0.1"
authors = ["libaozhong <libaozhong@xforceplus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pallet-balances]
default-features = false
package = 'pallet-balances'
version = '2.0.1'

[dependencies.codec]
default-features = false
package = 'parity-scale-codec'
version = '1.3.5'

[dependencies.frame-support]
default-features = false
version = '2.0.1'

[dependencies.safe-mix]
default-features = false
version = '1.0.1'

[dependencies.frame-system]
default-features = false
version = "2.0.1"


[dependencies.sp-std]
default-features = false
version = "2.0.1"


[dev-dependencies.sp-core]
default-features = false
version = "2.0.1"

[dev-dependencies.sp-io]
default-features = false
version = "2.0.1"


[dependencies.sp-runtime]
default-features = false
version = "2.0.1"

[dependencies.pallet-token]
default-features = false
git="https://github.com/z330789559/token.git"
branch="master"
version="2.0.1"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
	'frame-system/std',
    'sp-runtime/std',
    'pallet-balances/std'
]
